test/reusable/error/eval_module_var2.bfr
import "../sample/import_b.bfr" as B

let _ = B:c

main {} []